# footage-archive

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GOOGLE_SETUP.md  README.md  STATUS.md  alembic.ini  app.py  build_for_unraid.sh  docker-compose.yml  load-footage-archive.sh  pyproject.toml  requirements.txt  run-footage-archive.sh  run_local.sh  test.sqlite
.github/workflows/: publish-backend.yml  publish-frontend.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_photo_details_lens_fov.py  0003_file_details_altitude.py
api/: ai.py  base.py  config.py  dtos.py  files.py  keywords.py  locations.py  scanning.py  search.py  tasks.py  tracking.py  troubleshoot.py
davinci/: davinciresolve.py
db/: database.py  engine.py  models.py
dbeaver/dev/: create_users_and_db.sql  grant_privileges.sql
env/: environment.py
ffmpeg/: ffmpeg.py
frontend/: .dockerignore  Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/scripts/: generate-version.mjs
frontend/src/: styles.css  version.ts
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts  models.ts
frontend/src/app/browser/: browser.component.css  browser.component.html  browser.component.ts
frontend/src/app/map/: map.component.ts  (+2 more)
frontend/src/environments/: environment.production.ts  environment.ts
mlflow/: Dockerfile
photos/: exif.py
scanner/: scanner.py
shot_classifier/: classifier.py  models.py  prompt.py  shots.yml
sql/: missing_clip_previews.sql  setup.sql
tasks/: taskmanager.py  workerpool.py
(+24 files in other folders)
